welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: value :: is not a member of java.awt.Color
    T=T::(getCouleurSol)
       ^Array1:15: error: not found: type j
      setCouleurBrosse(T[j])
                         ^Array1:15: error: variable T of type Array[java.awt.Color] does not take type parameters.
      setCouleurBrosse(T[j])
                        ^