welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var T =Array[Color](getCouleurSol)
  avance()
  while ( T(0)!=getCouleurSol ){
    T=T::(getCouleurSol)
    avance()
  }
  for (i<-0 to getMondeHauteur()-1){
    gauche()
    avance()
    droite()
    for (j<- 0 to getMondeHauteur()-1){
      baisseBrosse()
      setCouleurBrosse(T[j])
      avance()
    }
  }
}